Assembler/tests/bad/constants/too_long_a_long.asm
tooLong: .long 0x987654321
